Fire oop-browser-crashed when mBrowserParent construction fails
Categories
(Core :: DOM: Core & HTML, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox69 | --- | fixed |
People
(Reporter: nika, Assigned: nika)
References
Details
Attachments
(1 file)
This is an attempt to reduce the negative impact of bug 1553644 by replacing a remote browser which fails to create an mBrowserParent actor with a tab crashed display rather than a failed nsFrameLoader. This is done by firing the oop-browser-crashed event on the owner <browser> element when the attempt fails, even if no BrowserParent was ever created.
This does not fix the root cause of bug 1553644, but may make the browser better at recovering.
| Assignee | ||
Comment 1•6 years ago
|
||
This is an attempt to reduce the negative impact of bug 1553644 by replacing a
remote browser which fails to create an mBrowserParent actor with a tab
crashed display rather than a failed nsFrameLoader. This is done by firing the
oop-browser-crashed event on the owner <browser> element when the attempt
fails, even if no BrowserParent was ever created.
This does not fix the root cause of bug 1553644, but may make the browser better
at recovering.
Comment 3•6 years ago
|
||
| bugherder | ||
Description
•